# qec-loss

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  patch.py  pyproject.toml  test_dem.py  test_reroute.py  test_speed.py
.github/workflows/: release.yml  test.yml
docs/: api.md
src/_fast_qec_loss/: bindings.cc  do_instruction.cc  do_instruction.h  fast_qec_loss.cc  forward_sampler.cc  forward_sampler.h  loss_instruction.cc  loss_instruction.h  lossy_circuit.cc  lossy_circuit.h  sampler.h  utils.cc  utils.h
src/_fast_qec_loss/circuit/: circuit.pybind.cc  loss_instruction.cc  lossy_circuit.cc  lossy_circuit.h
src/_fast_qec_loss/f2_tensor/: f2_tensor.cc  f2_tensor.h  f2_tensor.pybind.cc  packed_f2_matrix.cc  packed_f2_matrix.h  packed_f2_tensor.cc  packed_f2_tensor.h
src/_fast_qec_loss/monaka/: get_loss_dem.cc  get_loss_dem.h  life_cycle.cc  life_cycle.h  monaka.pybind.cc  monaka_builder.cc  monaka_builder.h
src/_fast_qec_loss/observable/: reroute.cc  reroute.h  reroute.pybind.cc
src/_fast_qec_loss/sampler/: do_instruction.cc  do_instruction.h  forward_sampler.cc  forward_sampler.h  sampler.cc  sampler.h  sampler.pybind.cc  sampler.pybind.h
src/qec_loss/: __init__.py  add_loss_noise.py  do_instruction.py  forward.py  loss_graph.py  loss_instruction.py  lossy_circuit.py  reroute.py  rewrite_instruction.py  utils.py
src/qec_loss/_native/: bindings.cc  utils.cc
src/qec_loss/_native/circuit/: circuit.pybind.cc  circuit.pybind.h  loss_instruction.cc  loss_instruction.h  lossy_circuit.cc  lossy_circuit.h
src/qec_loss/_native/f2_tensor/: f2_tensor.cc  f2_tensor.h  f2_tensor.pybind.cc  f2_tensor.pybind.h  packed_f2_matrix.cc  packed_f2_matrix.h
src/qec_loss/_native/monaka/: get_loss_dem.h  life_cycle.cc  monaka.pybind.cc  monaka.pybind.h  monaka_builder.cc  monaka_builder.h
src/qec_loss/_native/observable/: reroute.cc  reroute.h  reroute.pybind.cc  reroute.pybind.h  stabilizers.cc  stabilizers.h
src/qec_loss/_native/sampler/: do_instruction.cc  do_instruction.h  forward_sampler.cc  forward_sampler.h  sampler.h  sampler.pybind.cc
src/qec_loss/circuit/: __init__.py
src/qec_loss/f2_tensor/: __init__.py
src/qec_loss/monaka/: __init__.py
src/qec_loss/observable/: __init__.py
src/qec_loss/sampler/: __init__.py
tests/: conftest.py  test_add_loss_noise.py  test_combine_dem.py  test_f2_tensor.py  test_forward_sampler.py  test_life_cycle.py  test_loss_instruction.py  test_lossy_circuit.py  test_lossy_circuit_metadata.py  test_monaka_builder.py  test_monaka_dem.py  test_package_imports.py  test_pauli_rerouter.py  test_reroute.py  test_sample_batch_pickling.py
