[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13", "setuptools-scm"]
build-backend = "scikit_build_core.build"

[project]
name = "qec-loss"
dynamic = ["version"]
description = "Sample lossy quantum error correction code."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.scikit-build]
cmake.version = ">=3.20"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/qec_loss"]
wheel.install-dir = "qec_loss"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
